responsive cart page and checkout page

--- a/assets/css/sass/base/base/base.scss
+++ b/assets/css/sass/base/base/base.scss
@@ -14,6 +14,8 @@ html{
     -ms-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
     font-size: 14px;
     background-color: #fff;
 }
