--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -155,7 +155,7 @@
 
 	.remove_from_cart_button{
 		&:hover{
-			@include rotate( 90 )
+			@include rotate( 90 );
 		}
 	}
 }
@@ -169,7 +169,6 @@
 
 	li{
 		position: relative;
-		min-height: 90px;
 		padding: 10px 15px 10px 75px;
 		border-bottom: 1px solid #f7f7f7;
 		line-height: 26px;
