--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -214,7 +214,7 @@
         	&:before{
         		left: 0;
 	            top: 0;
-	            @include loading( $size: 20px, $center: false )
+	            @include loading( $size: 20px, $center: false );
         	}
         }
     }
@@ -223,7 +223,8 @@
 	.quantity{
 		width: auto;
 		height: auto;
-		border-radius: 0
+		border-radius: 0;
+		display: block;
 	}
 }
 
@@ -483,4 +484,12 @@
     }
 }
 
+/* Wishlist page: Share */
+.yith-wcwl-share{
+	@extend .woostify-social-icon;
+}
 
+/* Notice after added to wishlist */
+#yith-wcwl-popup-message {
+  display: none $i;
+}
