--- a/inc/customizer/custom-controls/radio-image/css/radio-image.css
+++ b/inc/customizer/custom-controls/radio-image/css/radio-image.css
@@ -2,7 +2,7 @@
 	display: none;
 }
 .customize-control-radio-image label {
-	margin-right: 10px;
+	margin: 0 5px 10px 0;
 	display: inline-block;
 	border: 3px solid #fcfcfc;
 }
