--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -237,6 +237,10 @@
 		display: flex;
 	}
 
+	.header-search-icon{
+		cursor: pointer;
+	}
+
 	.shopping-bag-button{
 		position: relative;
 	}
@@ -249,7 +253,7 @@
 }
 
 /* mobile menu toggle button */
-.menu-toggle-btn{
+.toggle-sidebar-menu-btn{
 	font-size: 24px;
 	cursor: pointer;
 	position: absolute;
@@ -258,8 +262,10 @@
 
 /* responsive */
 @media ( min-width: $screen-md ) {
-	.menu-toggle-btn{
-		display: none;
+	.header-layout-1 {
+		.toggle-sidebar-menu-btn{
+			display: none;
+		}
 	}
 
 	.site-navigation{
@@ -295,7 +301,8 @@
 	.site-tools{
 		position: absolute;
 		right: 27px;
-
+		
+		.header-search-icon,
 		.my-account{
 			display: none;
 		}
