WOOSTIFY-30 #comment support header-layout-3

--- a/assets/css/sass/base/layout/dialog-search.scss
+++ b/assets/css/sass/base/layout/dialog-search.scss
@@ -91,6 +91,9 @@
 	.search-form,
 	.woocommerce-product-search{
 		height: 60px;
+		&:after{
+			height: 100%;
+		}
 		.search-field {
 			border-radius: 0;
 			visibility: visible;
