WOOSTIFY-37 #comment update feedback

--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -46,8 +46,8 @@
 .site-main{
 	.page-header{
 		margin-bottom: 50px;
-		background-color: #eeeeec;
 		padding: 30px;
+		text-align: center;
 
 		.entry-title{
 			margin: 0;
