--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -271,7 +271,7 @@
 
 /* responsive */
 @media ( min-width: $screen-md ) {
-	.header-layout-1 {
+	.has-header-layout-1 {
 		.toggle-sidebar-menu-btn{
 			display: none;
 		}
