WOOSTIFY-35 #comment update woocommerce notification #done

--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -1,22 +1,6 @@
-.woostify-message{
-	.single-product &{
-		.woocommerce{
-			padding-top: 30px;
-		}
-	}
-	.woocommerce{
-		&:empty{
-			display: none;
-		}
-	}
-	ul{
-		margin: 0;
-	}
-}
-
 .wc-breadcrumb{
 	.single-product &{
-		padding: 35px 0;
+		padding-bottom: 35px;
 	}
 }
 
